# el1-parse

./: README.md  pyproject.toml
.github/workflows/: deploy_pages.yml  test.yml  test_artifacts.yml
samples/: SAMPLES.md  p1-l001-f1cropbottom-f2empty.el1  p1-l001-f1cropbottom-f2empty.yaml  p1-l001-f1cropped-f2empty.el1  p1-l001-f1cropped-f2empty.yaml  p1-l001-f1empty-f2cropped.el1  p1-l001-f1empty-f2cropped.yaml  p1-l001-f1empty-f2empty-p2-l001-f1empty-f2empty.el1  p1-l001-f1empty-f2empty-p2-l001-f1empty-f2empty.yaml  p1-l001-f1empty-f2empty-p2-l021-f1empty-f2empty-f3empty-p3-i006-f1empty.el1  p1-l001-f1empty-f2empty-p2-l021-f1empty-f2empty-f3empty-p3-i006-f1empty.yaml  p1-l001-f1empty-f2empty.el1  p1-l001-f1empty-f2empty.yaml  p1-l001-f1one-f2empty.el1  p1-l001-f1one-f2empty.yaml  p1-l001-f1one-f2two.el1  p1-l001-f1one-f2two.yaml
src/el1_parse/: __init__.py  __main__.py
src/el1_parse/structures/: __init__.py  el1.py  entry_metadata.py  filetime_adapter.py  hexdump_norepeat.py  page.py  photo.py  photo_file.py
tests/: test_el1_parse.py  test_filetime_adapter.py
webapp/: index.html
